🐛 Fix contact form not showing error icon

--- a/src/Fydar.Dev.WebApp/Components/Pages/ContactPage.razor.css
+++ b/src/Fydar.Dev.WebApp/Components/Pages/ContactPage.razor.css
@@ -90,7 +90,7 @@ p {
     background-clip: content-box;
     border: 1px solid var(--color-border-2);
     border-radius: 8px;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out,background .15s ease-in-out;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
     box-shadow: 0 0 0 500px var(--color-background-1) inset, 0 0 0 0 var(--color-border-select-1);
 }
@@ -136,6 +136,7 @@ p {
         background-repeat: no-repeat;
         background-position: right calc(.375em + .1875rem) center;
         background-size: calc(.75em + .375rem) calc(.75em + .375rem);
+        background-clip: border-box;
     }
 
         ::deep .form-control:user-invalid:focus,
